Fix frame-exact seeking again to stay within duration as opposed to rounding to the closest frame.

Based on discussion from https://bugs.webkit.org/show_bug.cgi?id=52697 to be consistent with other WebKit ports.

BUG=69499
TEST=media_unittests

Review URL: http://codereview.chromium.org/6259012

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@72247 0039d316-1c4b-4281-b951-d872f2087c98